--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,6 @@
     background-color: #424242;
     padding: 1em 0;
     text-align: center;
-    position: absolute;
-    bottom: 0;
     width: 100%;
+    margin-top: auto;
 }
