--- a/scss/_accesorios.scss
+++ b/scss/_accesorios.scss
@@ -3,17 +3,86 @@
     background-color: #424141;
     height: 80px;
     line-height: 30px;
-
-    .accesorios {
-        position: absolute;
-        top: 10px;
-        left: 820px;
-        color: #000000;
-        font-size: 35px;
-    }
+}
+.accesorios {
+    position: absolute;
+    top: 10px;
+    left: 840px;
+    color: #000000;
+    font-size: 35px;
 }
 
 .center {
     text-align: center;
     display: flex;
+}
+.grid-acce{
+    display: grid;
+}
+.medias-cuadros {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #4f4f4f;
+        margin: 20px;
+        height: 200px;
+        width: 200px;
+        border-radius: 30px;
+        box-shadow: 5px 5px 10px;
+        color: #00000094;
+    }
+}
+
+.izquierda{
+    grid-area: izquierda;
+    h1{
+        text-align: center;
+        padding-top: 30px;
+        text-shadow: 5px 5px 30px;
+        color: #000000;
+    }
+}
+.medio1{
+    grid-area: medio1;
+    h1{
+        text-align: center;
+        padding-top: 30px;
+        text-shadow: 5px 5px 30px;
+        color: #000000;
+    }
+}
+.derecha2{
+    grid-area: derecha2;
+    h1{
+        text-align: center;
+        padding-top: 30px;
+        text-shadow: 5px 5px 30px;
+        color: #000000;
+    }
+}
+.garantia{
+    display: flex;
+    text-align: center;
+    width: 100%;
+}
+.cajas-garantia{
+    background-color: #4f4f4f;
+    text-align: center;
+    border-radius: 30px;
+    font-size: 40px;
+    box-shadow: 5px 5px 30px black;
+    padding: 30px 50px;
+    color: black;
+    margin-top: 60px;
+}
+.garantia2{
+    grid-area: garantia2;
 }
