--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -3,7 +3,9 @@ body {
     font-family: "Mustica";
     font-weight: 400;
     font-style: normal;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     .flex-container {
         display: flex;
         flex-direction: row;
@@ -50,9 +52,6 @@ body {
     }    
     .grid {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-        grid-template-areas: "izq der";
     }
     
     .izq {
