--- a/scss/_como-comprar.scss
+++ b/scss/_como-comprar.scss
@@ -2,16 +2,12 @@
     position: absolute;
     top: 10px;
     left: 750px;
-    color: #2e2e2e;
+    color: #000000;
     font-size: 35px;
     width: 300px;
 }
 .acomode-lista {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 23px;
-    margin-top: 40px;
 
     .cuadro2{
         background-color: #4f4f4f;
