--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,7 +17,7 @@
 
 @font-face {
     font-family: "Mustica";
-    src: url(/assets/fuente/MusticaPro-SemiBold.otf);
+    src: url(../assets/fuente/MusticaPro-SemiBold.otf);
 }
 
 header nav li a {
